// See Makefile for the logic that generates this
// Protoc errors imply this file is being generated incorrectly
// Swift compile errors are probably bugs in protoc-gen-swift
syntax = "proto3";
package protobuf_unittest;
message GeneratedSwiftReservedFields {
  int32 a = 1;
  int32 adjusted = 2;
  int32 any = 3;
  int32 AnyExtensionField = 4;
  int32 AnyMessageExtension = 5;
  int32 AnyMessageStorage = 6;
  int32 Api = 7;
  int32 appended = 8;
  int32 appendUIntHex = 9;
  int32 appendUnknown = 10;
  int32 are = 11;
  int32 areAllInitialized = 12;
  int32 array = 13;
  int32 arrayLiteral = 14;
  int32 arraySeparator = 15;
  int32 as = 16;
  int32 asciiOpenCurlyBracket = 17;
  int32 asciiZero = 18;
  int32 asJSONObject = 19;
  int32 available = 20;
  int32 b = 21;
  int32 BaseType = 22;
  int32 because = 23;
  int32 binary = 24;
  int32 BinaryDecoder = 25;
  int32 BinaryEncoder = 26;
  int32 BinaryEncodingSizeVisitor = 27;
  int32 BinaryEncodingVisitor = 28;
  int32 body = 29;
  int32 bodySize = 30;
  int32 Bool = 31;
  int32 booleanLiteral = 32;
  int32 BooleanLiteralType = 33;
  int32 boolValue = 34;
  int32 buffer = 35;
  int32 buildTypeURL = 36;
  int32 by = 37;
  int32 bytes = 38;
  int32 bytesInGroup = 39;
  int32 BytesValue = 40;
  int32 c = 41;
  int32 capitalizeNext = 42;
  int32 cardinality = 43;
  int32 Character = 44;
  int32 characters = 45;
  int32 chars = 46;
  int32 clearExtensionValue = 47;
  int32 clearSourceContext = 48;
  int32 clearValue = 49;
  int32 Collection = 50;
  int32 consume = 51;
  int32 contentJSON = 52;
  int32 contentsOf = 53;
  int32 count = 54;
  int32 current = 55;
  int32 customCodable = 56;
  int32 d = 57;
  int32 Data = 58;
  int32 dataPointer = 59;
  int32 dataResult = 60;
  int32 dataSize = 61;
  int32 date = 62;
  int32 daySec = 63;
  int32 daysSinceEpoch = 64;
  int32 DD = 65;
  int32 debugDescription = 66;
  int32 decoded = 67;
  int32 decodedFromJSONNull = 68;
  int32 decodeExtensionField = 69;
  int32 decodeJSON = 70;
  int32 decodeMapField = 71;
  int32 decodeMessage = 72;
  int32 decoder = 73;
  int32 decodeRepeated = 74;
  int32 decodeRepeatedBoolField = 75;
  int32 decodeRepeatedBytesField = 76;
  int32 decodeRepeatedDoubleField = 77;
  int32 decodeRepeatedEnumField = 78;
  int32 decodeRepeatedFixed32Field = 79;
  int32 decodeRepeatedFixed64Field = 80;
  int32 decodeRepeatedFloatField = 81;
  int32 decodeRepeatedGroupField = 82;
  int32 decodeRepeatedInt32Field = 83;
  int32 decodeRepeatedInt64Field = 84;
  int32 decodeRepeatedMessageField = 85;
  int32 decodeRepeatedSFixed32Field = 86;
  int32 decodeRepeatedSFixed64Field = 87;
  int32 decodeRepeatedSInt32Field = 88;
  int32 decodeRepeatedSInt64Field = 89;
  int32 decodeRepeatedStringField = 90;
  int32 decodeRepeatedUInt32Field = 91;
  int32 decodeRepeatedUInt64Field = 92;
  int32 decodeSingular = 93;
  int32 decodeSingularBoolField = 94;
  int32 decodeSingularBytesField = 95;
  int32 decodeSingularDoubleField = 96;
  int32 decodeSingularEnumField = 97;
  int32 decodeSingularFixed32Field = 98;
  int32 decodeSingularFixed64Field = 99;
  int32 decodeSingularFloatField = 100;
  int32 decodeSingularGroupField = 101;
  int32 decodeSingularInt32Field = 102;
  int32 decodeSingularInt64Field = 103;
  int32 decodeSingularMessageField = 104;
  int32 decodeSingularSFixed32Field = 105;
  int32 decodeSingularSFixed64Field = 106;
  int32 decodeSingularSInt32Field = 107;
  int32 decodeSingularSInt64Field = 108;
  int32 decodeSingularStringField = 109;
  int32 decodeSingularUInt32Field = 110;
  int32 decodeSingularUInt64Field = 111;
  int32 decodeString = 112;
  int32 decodeTextFormat = 113;
  int32 defaultValue = 114;
  int32 description = 115;
  int32 destination = 116;
  int32 Dictionary = 117;
  int32 dictionaryLiteral = 118;
  int32 digit = 119;
  int32 digit0 = 120;
  int32 digit1 = 121;
  int32 digitCount = 122;
  int32 digits = 123;
  int32 digitValue = 124;
  int32 discardableResult = 125;
  int32 DispatchQueue = 126;
  int32 div = 127;
  int32 double = 128;
  int32 doubleToUtf8 = 129;
  int32 DoubleValue = 130;
  int32 Duration = 131;
  int32 E = 132;
  int32 Element = 133;
  int32 elements = 134;
  int32 emitExtensionFieldName = 135;
  int32 emitFieldName = 136;
  int32 emitFieldNumber = 137;
  int32 emitVerboseTextForm = 138;
  int32 Empty = 139;
  int32 emptyData = 140;
  int32 encoded = 141;
  int32 encodedJSONString = 142;
  int32 encodedSize = 143;
  int32 encodeField = 144;
  int32 encoder = 145;
  int32 end = 146;
  int32 endArray = 147;
  int32 endMessageField = 148;
  int32 endObject = 149;
  int32 endRegularField = 150;
  int32 Enum = 151;
  int32 enumvalue = 152;
  int32 Equatable = 153;
  int32 ext = 154;
  int32 extendedGraphemeClusterLiteral = 155;
  int32 ExtendedGraphemeClusterLiteralType = 156;
  int32 ExtensionFieldValueSet = 157;
  int32 ExtensionMap = 158;
  int32 extensions = 159;
  int32 extras = 160;
  int32 f = 161;
  int32 false = 162;
  int32 fastUtf8ToString = 163;
  int32 field = 164;
  int32 FieldMask = 165;
  int32 fieldName = 166;
  int32 fieldNameCount = 167;
  int32 fieldNumber = 168;
  int32 fieldNumberForProto = 169;
  int32 fields = 170;
  int32 fieldSize = 171;
  int32 FieldTag = 172;
  int32 fieldType = 173;
  int32 fieldValue = 174;
  int32 fileName = 175;
  int32 fileprivate = 176;
  int32 firstItem = 177;
  int32 flatMap = 178;
  int32 float = 179;
  int32 floatLiteral = 180;
  int32 FloatLiteralType = 181;
  int32 floatToUtf8 = 182;
  int32 FloatValue = 183;
  int32 for = 184;
  int32 formatDuration = 185;
  int32 formatTimestamp = 186;
  int32 forMessage = 187;
  int32 forMessageName = 188;
  int32 forReadingFrom = 189;
  int32 forTypeURL = 190;
  int32 forWritingInto = 191;
  int32 from = 192;
  int32 fromAscii2 = 193;
  int32 fromAscii4 = 194;
  int32 fromHexDigit = 195;
  int32 fromJSONString = 196;
  int32 fromJSONUTF8Data = 197;
  int32 fromMessage = 198;
  int32 fromURL = 199;
  int32 func = 200;
  int32 Functions = 201;
  int32 G = 202;
  int32 generated = 203;
  int32 get = 204;
  int32 getExtensionValue = 205;
  int32 Google_Protobuf_Any = 206;
  int32 Google_Protobuf_Api = 207;
  int32 Google_Protobuf_BoolValue = 208;
  int32 Google_Protobuf_BytesValue = 209;
  int32 Google_Protobuf_DoubleValue = 210;
  int32 Google_Protobuf_Duration = 211;
  int32 Google_Protobuf_Empty = 212;
  int32 Google_Protobuf_Enum = 213;
  int32 Google_Protobuf_EnumValue = 214;
  int32 Google_Protobuf_Field = 215;
  int32 Google_Protobuf_FieldMask = 216;
  int32 Google_Protobuf_FloatValue = 217;
  int32 Google_Protobuf_Int32Value = 218;
  int32 Google_Protobuf_Int64Value = 219;
  int32 Google_Protobuf_ListValue = 220;
  int32 Google_Protobuf_Method = 221;
  int32 Google_Protobuf_Mixin = 222;
  int32 Google_Protobuf_NullValue = 223;
  int32 Google_Protobuf_Option = 224;
  int32 Google_Protobuf_SourceContext = 225;
  int32 Google_Protobuf_StringValue = 226;
  int32 Google_Protobuf_Struct = 227;
  int32 Google_Protobuf_Syntax = 228;
  int32 Google_Protobuf_Timestamp = 229;
  int32 Google_Protobuf_Type = 230;
  int32 Google_Protobuf_UInt32Value = 231;
  int32 Google_Protobuf_UInt64Value = 232;
  int32 Google_Protobuf_Value = 233;
  int32 gregorianDateFromSecondsSince1970 = 234;
  int32 group = 235;
  int32 h = 236;
  int32 handleConflictingOneOf = 237;
  int32 has = 238;
  int32 hasExtensionValue = 239;
  int32 hash = 240;
  int32 Hashable = 241;
  int32 hashValue = 242;
  int32 HashVisitor = 243;
  int32 hasSourceContext = 244;
  int32 hasValue = 245;
  int32 hh = 246;
  int32 hour = 247;
  int32 i = 248;
  int32 in = 249;
  int32 index = 250;
  int32 init = 251;
  int32 inout = 252;
  int32 insert = 253;
  int32 insertIntoSet = 254;
  int32 Int = 255;
  int32 Int32 = 256;
  int32 Int32Value = 257;
  int32 Int64 = 258;
  int32 Int64Value = 259;
  int32 Int8 = 260;
  int32 integerLiteral = 261;
  int32 IntegerLiteralType = 262;
  int32 intern = 263;
  int32 Internal = 264;
  int32 InternalState = 265;
  int32 isA = 266;
  int32 isEqual = 267;
  int32 isEqualTo = 268;
  int32 isInitialized = 269;
  int32 it = 270;
  int32 Iterator = 271;
  int32 i_2166136261 = 272;
  int32 json = 273;
  int32 JSONDecoder = 274;
  int32 jsonEncoder = 275;
  int32 JSONEncodingVisitor = 276;
  int32 JSONMapEncodingVisitor = 277;
  int32 jsonName = 278;
  int32 jsonPath = 279;
  int32 jsonPaths = 280;
  int32 JSONScanner = 281;
  int32 jsonString = 282;
  int32 jsonText = 283;
  int32 JSONToProto = 284;
  int32 jsonUTF8Data = 285;
  int32 julianDayNumberFromSecondsSince1970 = 286;
  int32 k = 287;
  int32 Key = 288;
  int32 keyField = 289;
  int32 KeyType = 290;
  int32 kind = 291;
  int32 knownTypes = 292;
  int32 l = 293;
  int32 label = 294;
  int32 length = 295;
  int32 let = 296;
  int32 lhs = 297;
  int32 listOfMessages = 298;
  int32 listValue = 299;
  int32 littleEndian = 300;
  int32 littleEndianBytes = 301;
  int32 M = 302;
  int32 major = 303;
  int32 makeIterator = 304;
  int32 mapHash = 305;
  int32 mapNameResolver = 306;
  int32 mapToMessages = 307;
  int32 MapValueType = 308;
  int32 mapVisitor = 309;
  int32 mdayStart = 310;
  int32 members = 311;
  int32 merge = 312;
  int32 message = 313;
  int32 MessageExtension = 314;
  int32 messageType = 315;
  int32 Method = 316;
  int32 methods = 317;
  int32 minor = 318;
  int32 Mixin = 319;
  int32 mixins = 320;
  int32 mm = 321;
  int32 mod = 322;
  int32 month = 323;
  int32 mutating = 324;
  int32 n = 325;
  int32 name = 326;
  int32 NameDescription = 327;
  int32 NameMap = 328;
  int32 nameResolver = 329;
  int32 names = 330;
  int32 nanos = 331;
  int32 nativeBytes = 332;
  int32 nativeEndianBytes = 333;
  int32 newL = 334;
  int32 newValue = 335;
  int32 nextFieldNumber = 336;
  int32 nil = 337;
  int32 nilLiteral = 338;
  int32 no = 339;
  int32 normalizeForDuration = 340;
  int32 normalizeForTimestamp = 341;
  int32 nullValue = 342;
  int32 number = 343;
  int32 numberValue = 344;
  int32 of = 345;
  int32 oneofIndex = 346;
  int32 oneofs = 347;
  int32 OneOf_Kind = 348;
  int32 only = 349;
  int32 Option = 350;
  int32 OptionalEnumExtensionField = 351;
  int32 OptionalExtensionField = 352;
  int32 OptionalGroupExtensionField = 353;
  int32 OptionalMessageExtensionField = 354;
  int32 options = 355;
  int32 org = 356;
  int32 other = 357;
  int32 out = 358;
  int32 output = 359;
  int32 p = 360;
  int32 packed = 361;
  int32 PackedEnumExtensionField = 362;
  int32 PackedExtensionField = 363;
  int32 packedSize = 364;
  int32 padding = 365;
  int32 parseBareFloatString = 366;
  int32 parseBareSInt = 367;
  int32 parseBareUInt = 368;
  int32 parseBytes = 369;
  int32 parseDuration = 370;
  int32 parseJSONFieldNames = 371;
  int32 parseTimestamp = 372;
  int32 partial = 373;
  int32 path = 374;
  int32 paths = 375;
  int32 pointer = 376;
  int32 pos = 377;
  int32 prefix = 378;
  int32 preTraverse = 379;
  int32 private = 380;
  int32 proto = 381;
  int32 proto2 = 382;
  int32 proto3DefaultValue = 383;
  int32 protobuf = 384;
  int32 ProtobufBool = 385;
  int32 ProtobufBytes = 386;
  int32 ProtobufDouble = 387;
  int32 ProtobufEnumMap = 388;
  int32 protobufExtension = 389;
  int32 ProtobufFloat = 390;
  int32 ProtobufInt32 = 391;
  int32 ProtobufInt64 = 392;
  int32 ProtobufMap = 393;
  int32 ProtobufMessageMap = 394;
  int32 ProtobufString = 395;
  int32 ProtobufUInt32 = 396;
  int32 ProtobufUInt64 = 397;
  int32 protobuf_extensionFieldValues = 398;
  int32 protobuf_fieldNumber = 399;
  int32 protobuf_generated_isEqualTo = 400;
  int32 protobuf_nameMap = 401;
  int32 protobuf_newField = 402;
  int32 protobuf_package = 403;
  int32 protoFieldName = 404;
  int32 protoMessageName = 405;
  int32 protoPaths = 406;
  int32 ProtoToJSON = 407;
  int32 public = 408;
  int32 putBoolValue = 409;
  int32 putBytesValue = 410;
  int32 putDoubleValue = 411;
  int32 putEnumValue = 412;
  int32 putFixedUInt32 = 413;
  int32 putFixedUInt64 = 414;
  int32 putFloatValue = 415;
  int32 putInt64 = 416;
  int32 putStringValue = 417;
  int32 putUInt64 = 418;
  int32 putUInt64Hex = 419;
  int32 putVarInt = 420;
  int32 putZigZagVarInt = 421;
  int32 rawChars = 422;
  int32 RawValue = 423;
  int32 register = 424;
  int32 RepeatedEnumExtensionField = 425;
  int32 RepeatedExtensionField = 426;
  int32 RepeatedGroupExtensionField = 427;
  int32 RepeatedMessageExtensionField = 428;
  int32 requestStreaming = 429;
  int32 requestTypeURL = 430;
  int32 requiredSize = 431;
  int32 responseStreaming = 432;
  int32 responseTypeURL = 433;
  int32 result = 434;
  int32 return = 435;
  int32 revision = 436;
  int32 rhs = 437;
  int32 root = 438;
  int32 s = 439;
  int32 sawBackslash = 440;
  int32 scanner = 441;
  int32 seconds = 442;
  int32 self = 443;
  int32 separator = 444;
  int32 serializeAnyJSON = 445;
  int32 serializedData = 446;
  int32 serializedSize = 447;
  int32 serialQueue = 448;
  int32 set = 449;
  int32 setExtensionValue = 450;
  int32 shift = 451;
  int32 SignedInteger = 452;
  int32 SimpleExtensionMap = 453;
  int32 sizer = 454;
  int32 slowUtf8ToString = 455;
  int32 source = 456;
  int32 sourceContext = 457;
  int32 split = 458;
  int32 ss = 459;
  int32 start = 460;
  int32 startArray = 461;
  int32 startField = 462;
  int32 startIndex = 463;
  int32 startMessageField = 464;
  int32 startObject = 465;
  int32 startRegularField = 466;
  int32 state = 467;
  int32 static = 468;
  int32 StaticString = 469;
  int32 storage = 470;
  int32 StorageClass = 471;
  int32 String = 472;
  int32 stringLiteral = 473;
  int32 StringLiteralType = 474;
  int32 stringResult = 475;
  int32 stringValue = 476;
  int32 Struct = 477;
  int32 structValue = 478;
  int32 subDecoder = 479;
  int32 subscript = 480;
  int32 swift = 481;
  int32 SwiftProtobuf = 482;
  int32 syntax = 483;
  int32 T = 484;
  int32 tag = 485;
  int32 target = 486;
  int32 terminator = 487;
  int32 testDecoder = 488;
  int32 text = 489;
  int32 textDecoder = 490;
  int32 TextFormatDecoder = 491;
  int32 TextFormatEncoder = 492;
  int32 TextFormatEncodingVisitor = 493;
  int32 TextFormatScanner = 494;
  int32 textFormatString = 495;
  int32 that = 496;
  int32 they = 497;
  int32 throws = 498;
  int32 timeInterval = 499;
  int32 timeIntervalSince1970 = 500;
  int32 timeIntervalSinceReferenceDate = 501;
  int32 timeOfDayFromSecondsSince1970 = 502;
  int32 Timestamp = 503;
  int32 toJsonFieldName = 504;
  int32 total = 505;
  int32 traverse = 506;
  int32 true = 507;
  int32 try = 508;
  int32 Type = 509;
  int32 typealias = 510;
  int32 typeName = 511;
  int32 typePrefix = 512;
  int32 typeRegistry = 513;
  int32 typeStart = 514;
  int32 typeUnknown = 515;
  int32 typeURL = 516;
  int32 UInt32 = 517;
  int32 UInt32Value = 518;
  int32 UInt64 = 519;
  int32 UInt64Value = 520;
  int32 UInt8 = 521;
  int32 UnicodeScalar = 522;
  int32 unicodeScalarLiteral = 523;
  int32 UnicodeScalarLiteralType = 524;
  int32 unicodeScalars = 525;
  int32 UnicodeScalarView = 526;
  int32 union = 527;
  int32 uniqueStorage = 528;
  int32 unknown = 529;
  int32 unknownData = 530;
  int32 unknownFields = 531;
  int32 UnknownStorage = 532;
  int32 unpack = 533;
  int32 unpackTo = 534;
  int32 UnsafeBufferPointer = 535;
  int32 UnsafeMutablePointer = 536;
  int32 UnsafeMutableRawBufferPointer = 537;
  int32 UnsafePointer = 538;
  int32 url = 539;
  int32 used = 540;
  int32 utf8 = 541;
  int32 utf8Buffer = 542;
  int32 utf8Codec = 543;
  int32 utf8ToDouble = 544;
  int32 utf8ToString = 545;
  int32 UTF8View = 546;
  int32 v = 547;
  int32 value = 548;
  int32 valueField = 549;
  int32 values = 550;
  int32 ValueType = 551;
  int32 var = 552;
  int32 version = 553;
  int32 versionString = 554;
  int32 visitExtensionFields = 555;
  int32 visitMapField = 556;
  int32 visitor = 557;
  int32 visitPacked = 558;
  int32 visitPackedBoolField = 559;
  int32 visitPackedDoubleField = 560;
  int32 visitPackedEnumField = 561;
  int32 visitPackedFixed32Field = 562;
  int32 visitPackedFixed64Field = 563;
  int32 visitPackedFloatField = 564;
  int32 visitPackedInt32Field = 565;
  int32 visitPackedInt64Field = 566;
  int32 visitPackedSFixed32Field = 567;
  int32 visitPackedSFixed64Field = 568;
  int32 visitPackedSInt32Field = 569;
  int32 visitPackedSInt64Field = 570;
  int32 visitPackedUInt32Field = 571;
  int32 visitPackedUInt64Field = 572;
  int32 visitRepeated = 573;
  int32 visitRepeatedBoolField = 574;
  int32 visitRepeatedBytesField = 575;
  int32 visitRepeatedDoubleField = 576;
  int32 visitRepeatedEnumField = 577;
  int32 visitRepeatedFixed32Field = 578;
  int32 visitRepeatedFixed64Field = 579;
  int32 visitRepeatedFloatField = 580;
  int32 visitRepeatedGroupField = 581;
  int32 visitRepeatedInt32Field = 582;
  int32 visitRepeatedInt64Field = 583;
  int32 visitRepeatedMessageField = 584;
  int32 visitRepeatedSFixed32Field = 585;
  int32 visitRepeatedSFixed64Field = 586;
  int32 visitRepeatedSInt32Field = 587;
  int32 visitRepeatedSInt64Field = 588;
  int32 visitRepeatedStringField = 589;
  int32 visitRepeatedUInt32Field = 590;
  int32 visitRepeatedUInt64Field = 591;
  int32 visitSingular = 592;
  int32 visitSingularBoolField = 593;
  int32 visitSingularBytesField = 594;
  int32 visitSingularDoubleField = 595;
  int32 visitSingularEnumField = 596;
  int32 visitSingularFixed32Field = 597;
  int32 visitSingularFixed64Field = 598;
  int32 visitSingularFloatField = 599;
  int32 visitSingularGroupField = 600;
  int32 visitSingularInt32Field = 601;
  int32 visitSingularInt64Field = 602;
  int32 visitSingularMessageField = 603;
  int32 visitSingularSFixed32Field = 604;
  int32 visitSingularSFixed64Field = 605;
  int32 visitSingularSInt32Field = 606;
  int32 visitSingularSInt64Field = 607;
  int32 visitSingularStringField = 608;
  int32 visitSingularUInt32Field = 609;
  int32 visitSingularUInt64Field = 610;
  int32 visitUnknown = 611;
  int32 where = 612;
  int32 wireFormat = 613;
  int32 with = 614;
  int32 WrappedType = 615;
  int32 wrapped_vsnprintf = 616;
  int32 yday = 617;
  int32 YY = 618;
}
